# satring

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  requirements.txt
.claude/skills/: satring-dev-cycle.md
app/: audience.py  config.py  database.py  health.py  l402.py  main.py  models.py  mpp.py  payment.py  usage.py  utils.py  x402.py
app/routes/: api.py  web.py
app/static/.well-known/: nostr.json
app/static/css/: theme.css
app/templates/: base.html  privacy.html
app/templates/services/: _analytics_result.html  _card.html  _card_grid.html  _pagination.html  _paid_report_widget.html  _payment_widget.html  _reputation_result.html  _review_bubble.html  _service_analytics_result.html  detail.html  edit.html  list.html  owner_dashboard.html  payment_required.html  recover.html  stats.html  submit.html  submit_success.html
docs/: STACK.md
mcp/: LICENSE  README.md  glama.json  pyproject.toml  satring_mcp.py  server.json  smithery.yaml
tests/: conftest.py  test_api.py  test_cors.py  test_domain_verified.py  test_edit.py  test_endpt_smoke.py  test_endpts.py  test_health.py  test_improvements.py  test_l402.py  test_mcp.py  test_mpp.py  test_payment.py  test_security.py  test_slugify.py  test_usage.py  test_verify_email.py  test_web.py  test_x402.py  test_x402_e2e.py
