[project]
name = "satring-mcp"
version = "0.1.0"
description = "MCP server for satring.com — discover L402 and x402 paid APIs"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "httpx>=0.27"]

[project.scripts]
satring-mcp = "satring_mcp:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
