[project]
name = "satring-mcp"
version = "0.1.0"
description = "MCP server for satring.com — the best curated L402 + x402 API directory"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "httpx>=0.27"]

[project.scripts]
satring-mcp = "satring_mcp:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
