[project]
name = "satring-mcp"
version = "0.1.2"
description = "MCP server for satring.com: the best curated L402 + x402 API directory"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0", "httpx>=0.27"]
license = "MIT"
readme = "README.md"
authors = [{ name = "toadlyBroodle" }]
keywords = ["mcp", "l402", "x402", "lightning", "api-directory", "bitcoin", "usdc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://satring.com"
Repository = "https://github.com/toadlyBroodle/satring"

[project.scripts]
satring-mcp = "satring_mcp:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
